# whisperx-karaoke

./: .gitignore  cli.py  main.ipynb  main.py  pyproject.toml  readme.md
whisperx_karaoke/: __main__.py  ass.py  cli.py  resolver.py
